# wtforms-html5

./: .bumpversion.cfg  .editorconfig  .gitignore  .pre-commit-config.yaml  .pyup.yml  .travis.yml  CHANGELOG.md  CHANGELOG.rst  CHANGES.md  CHANGES.txt  CREDITS  LICENSE.txt  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  makefile  pyproject.toml  requirements.txt  run_doctests.sh  run_style_checks.sh  run_unittests.sh  setup.cfg  setup.py  test_wtforms_html5.py  tox.ini  travis.yaml  wtforms_html5.py
.github/workflows/: coverage.yml  pre-commit.yml  test.yml
changes/: +ELPCCOcId.rm.md  +LwN0ot4ZG.change.md  +WlQxBsgYl.change.md  +yDU0etTG2.change.md  +yyjhuRrea.feat.md  _Hf9YsZTIB.fix.md  _IcvAJaNnu.change.md  _JMGo2hTWF.removal.md  _djckC52rN.change.md  _vcNqzB9el.change.md  _yQhAT0Lsf.change.md  _zCfgFuekQ.feature.md  template.j2
releasenotes/: config.yaml
releasenotes/notes/: 0.1.0-4f1313db5804cf2e.yaml  0.1.1-e9bdb93549c3a627.yaml  0.1.2-a3c71e3a6803506b.yaml  0.1.3-0d569fbb553c37fb.yaml  0.2.0-c788180fd06d9ddc.yaml  0.2.1-939e1cae96bb2606.yaml  0.2.2-65607763c9311609.yaml  0.2.3-c55d51a26f4d2736.yaml  0.2.4-68904fe591f8c7cc.yaml  0.3.0-9446d3d286d031f5.yaml  0.4.0-8adf1bff57348a99.yaml  0.5.0-8a0e3031ff489d26.yaml
requirements/: base.txt  ci.txt  constraints.txt  dev.in  development.txt  lint.txt  testing.txt  tests.in
src/: wtforms_html5.py
src/wtforms_html5/: __init__.py
tests/: __init__.py  conftest.py  test_autoattrmeta.py  test_get_html5_kwargs.py  test_version.py
