[metadata]
name = wtforms-html5
version = 0.4.0
author = Brutus
author_email = brutus.dmc@googlemail.com
description = Generates render keywords for widgets of WTForms HTML5 fields.
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU GPLv3
url = https://github.com/brutus/wtforms-html5/
classifiers =
	License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent
	Programming Language :: Python
	Development Status :: 4 - Beta
	Environment :: Web Environment
	Intended Audience :: Developers
	Natural Language :: English
	Topic :: Internet :: WWW/HTTP

[options]
package_dir =
	= src
py_modules =
	wtforms_html5
install_requires =
	wtforms
